<resources>
    <string name="facebook_app_id">3557121010984987</string>
    <string name="fb_login_protocol_scheme">fb3557121010984987</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="done">Done</string>
    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>
    <string name="screen1_desc">Choose from 75000 service, 2500 models operators.
    dummy dummy blah blah blah blah blah blah blah blah blah</string>
    <string name="screen1_title">Book Bus</string>
    <string name="screen2_desc">Apply multiple filters like bus type, price, time and many more.</string>
    <string name="screen2_title">Filter your search</string>
    <string name="screen3_desc">Choose multiple payment modes wallets, credit/debit cards, net banking and abhicash.</string>
    <string name="screen3_title">Easy Payments</string>
    <string name="screen5_desc">Manage your cash backs, cancellations &amp; booking refunds.</string>
    <string name="screen5_title">abhicash</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="password_hint">Password</string>
    <string name="user_name_hint">Username</string>
    <string name="register_log">REGISTER A NEW ACCOUNT</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="nat_hint">Nationality</string>
    <string name="phone_hint">Mobile number (Optional)</string>
    <string name="user_email_hint">Email or Username</string>
    <string name="re_password_hint">Confirm Password</string>
    <string name="register">Register</string>
    <string name="password_hint2">Password</string>
    <string name="user_name_hint2">Username</string>
    <string name="name_mandatory">Your last name is mandatory</string>
    <string name="firstname_mandatory">Your first name is mandatory</string>
    <string name="nat_mandatory"> name is required </string>
    <string name="user_name_mandatory"> User name is mandatory </string>
    <string name="rpw_mandatory"> Dose not match </string>
    <string name="trans_under_review"> Under review </string>
    <string name="trans_passed"> Passed </string>
    <string name="title_activity_main"> MainActivity </string>
    <string name="title_home"> requests </string>
    <string name="title_dashboard"> my requests </string>
    <string name="title_notifications"> notifications </string>
    <string name="logout_hint"> log out </string>
    <string name="login_label"> System of dealers </string>
    <string name="internet_connection_error"> Please connect to the Internet. </string>
    <string name="try_again"> Please try again </string>
    <string name="success_login"> Logged in successfully. </string>
    <string name="all_fields_error"> All fields is mandatory. </string>
    <string name="email_empty"> Email is mandatory </string>
    <string name="permissions"> The application needs some permissions </string>
    <string name="phone_error"> phone number 10 number </string>
    <string name="phone_required"> Phone number required </string>
    <string name="number_error"> Between 9 and 25 </string>
    <string name="name_error"> The number of characters is between 2 to 20 </string>
    <string name="name_error2"> Numbers is refused </string>
    <string name="change_language"> Change language </string>
    <string name="name_constrains"> [0–9] and special characters are not allowed. </string>
    <string name="user_name_error_length"> Username between 2 to 20 digits </string>
    <string name="default_notification_channel_id"> 4568752 </string>
    <string name="select_language"> English </string>
    <string name="hint_username"> Username </string>
    <string name="hint_password"> Password </string>
    <string name="label_login"> Login </string>
    <string name="msg_pass_required"> Password required </string>
    <string name="msg_pass_length"> Password must be at least 6 characters </string>
    <string name="msg_email_required"> Email required </string>
    <string name="msg_email_invalid"> Invalid Email address </string>
    <string name="label_waiting"> Waiting </string>
    <string name="label_accepted"> Accepted </string>
    <string name="label_finished"> Finished </string>
    <string name="pic_camera"> Take a picture </string>
    <string name="pic_gallery"> Select an image from Gallery </string>
    <string name="sort_by"> Sort by </string>
    <string name="subtitle1"> Request status </string>
    <string name="issue_type"> Issue Type </string>
    <string name="please_select_the_device_name"> Please select the device name </string>
    <string name="please_select_the_model_name"> Please select the device model name </string>
    <string name="please_select_the_issue_type"> Please select your issue type </string>
    <string name="location_permission"> Location Permission </string>
    <string name="location_permission_message"> Please enable the location permission to let the app getting your request location. </string>
    <string name="show_enable_dialog"> Show Enable Dialog </string>
    <string name="location_permission_denied"> Cannot complete without the location permission </string>
    <string name="add_images"> Add Images </string>
    <string name="issue_location"> Issue Location </string>
    <string name="click_here_to_set_issue_location"> Click Here To Set Issue Location </string>
    <string name="set_location"> Set Location </string>
    <string name="check_email"> Please Check Your Email </string>
    <string name="please_wait"> Please wait .. </string>
    <string name="account"> My Account </string>
    <string name="save_locations"> Saved Locations </string>
    <string name="save_devices"> Saved Devices </string>
    <string name="history"> Order History </string>
    <string name="application"> Application </string>
    <string name="terms_and_conditions"> Terms And Conditions </string>
    <string name="contact_us"> Contact Us </string>
    <string name="faq"> FAQ </string>
    <string name="about"> About </string>
    <string name="app_version_0_8_beta"> App Version 0.8 beta. </string>
    <string name="tell_us_more_about_your_issue"> Tell us more about your issue .. </string>
    <string name="send_request"> Send Request </string>
    <string name="request_sent"> Your request have been sent successfully </string>
    <string name="settings"> Settings </string>
    <string name="place_name"> Place Name </string>
    <string name="location_address"> Location Address </string>
    <string name="city"> City </string>
    <string name="country"> Country </string>
    <string name="location_type"> Location Type </string>
    <string name="office"> Office </string>
    <string name="apartment"> Apartment </string>
    <string name="floor"> Floor </string>
    <string name="door"> Door </string>
    <string name="title_activity_maps"> Map </string>
    <string name="please_enable_device_gps"> Please enable device gps </string>
    <string name="no"> No </string>
    <string name="yes"> Yes </string>
    <string name="filter_your_request"> Filter your requests </string>
    <string name="date"> Birth Date </string>
    <string name="alphabetically"> Alphabetically </string>
    <string name="filter_by"> Filter by: </string>
    <string name="device_brand"> Device\'s brand </string>
    <string name="device_category_hint"> Device\'s branchCategory </string>
    <string name="device_model_hint"> Device\'s model </string>
    <string name="services_hint"> Services </string>
    <string name="apply"> APPLY </string>
    <string name="submit"> Submit </string>
    <string name="the_professionals_that_you_will_never_met"> The professionals that you will never met </string>
    <string name="please_drag_map_to_your_address_and_click"> Please drag map to your address and click </string>
    <string name="request_an_inspecti"> Request an inspecti ... </string>
    <string name="request_information"> Request information </string>
    <string name="shipping_address"> Shipping address </string>
    <string name="model"> Model </string>
    <string name="service_hint"> Service </string>
    <string name="service"> Service </string>
    <string name="description_hint"> Description </string>
    <string name="enter_descreoption_for_your_issues_to_help_the_technician_resolve_it_quikly"> Enter descreoption for your issues to help the technician resolve it quikly. </string>
    <string name="add_photos"> ADD PHOTOS </string>
    <string name="reset_password"> Reset Password </string>
    <string name="select_address_hint"> Select address </string>
    <string name="add_new_address"> Add new address </string>
    <string name="street_address"> Street address </string>
    <string name="apartment_no_hint"> Appartment No </string>
    <string name="address_type_hint"> Address type </string>
    <string name="available_time_hint"> Avalible time </string>
    <string name="back"> Back </string>
    <string name="skip"> Skip </string>
    <string name="send_verification_code"> Send verification code </string>
    <string name="verification_code_hint"> Verification code </string>
    <string name="reset_password_msg"> We have sent you an email with a link to reset your password. Please check your email and continue restting your password. </string>
    <string name="change"> Change </string>
    <string name="save"> Save </string>
    <string name="select_from_map"> Select from map </string>
    <string name="no_brands"> No Brands </string>
    <string name="please_chose_your_device_barand"> Please chose your device\'s barand. </string>
    <string name="address"> Address </string>
    <string name="payments"> Payments </string>
    <string name="add_new_payment"> Add new payment </string>
    <string name="notifications_st"> Notifications </string>
    <string name="home_lbl"> Home </string>
    <string name="ok"> OK </string>
    <string name="cancel"> Cancel </string>
    <string name="cart"> My Cart </string>
    <string name="terms_welcome"> Welcome to Wasellak </string>
    <string name="terms_welcome_details"> Defined or bolded terms shall have the meanings given to them in these Site Terms. The word seller refers either to you as an individual if you use the services on behalf of yourself, or the company for which you work as a representative (if you are registered or use a service in your capacity (as part of) a company or any of your affiliates (individually (in relation to each selected country) or Collectively,
        as the context requires)) and you choose to create a seller account in each of the selected countries and / or
        <b>register on the site.</b> Seller agrees to abide by and be bound by these site terms </string>
    <string name="terms_sales"> Sales process and implementation </string>
    <string name="terms_sales_details"> Other than the cases in which we agree to provide our services to you according to the conditions of our other services (and at this time only according to the guarantees and to the extent stipulated in the terms of the other services mentioned), and for any of our services that you request to use or benefit from (and which we agree to provide) in each country from Selected countries, you must:</string>
    <string name="terms_paymenst"> Fees and payments </string>
    <string name="terms_payments_details"> Other than the cases in which we agree to provide our services to you</string>
    <string name="total_cart">Cart Total</string>
    <string name="added_to_cart">The product has been added to the cart</string>
    <string name="cart_ask">You can add a custom request to this item</string>
    <string name="complete_purchase">Purchase</string>
    <string name="special_order">ادخل طلبك المخصص هنا</string>
    <string name="purchase_skip">استكمال التسوق</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="enter_reason">Enter Reason</string>
</resources>