<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleTextStyle"

            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:text="@string/cancel_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>


        <EditText
            android:id="@+id/etNote"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            style="@style/TitleTextStyle"
            android:textSize="@dimen/dimen_14sp"
            android:inputType="text|textMultiLine"
            android:textStyle="normal"
            android:hint="@string/enter_reason"
            android:scrollbars="vertical"
            android:textAlignment="viewStart"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />




        <TextView
            android:id="@+id/tvCancel"
            style="@style/NegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/cancel"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNote" />

        <TextView
            android:id="@+id/tvOk"
            style="@style/PositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/ok"
            android:visibility="gone"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNote" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>