<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F9F9FB">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/MyToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                app:navigationIcon="@drawable/ic_toolbar_nav">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:text="@string/terms_and_conditions"
                        android:textColor="#003312"
                        android:textSize="@dimen/dimen_17sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ivAdd"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F9F9FB"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="100dp"
                android:scrollbars="vertical">


                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:alpha="0.6"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="center"
                    android:text="@string/terms_welcome"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline_"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvWelcomeDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:alpha="0.6"
                    android:fontFamily="@font/cairo_regular"
                    android:gravity="start"
                    android:text="@string/terms_welcome_details"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_14sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/tvWelcome"
                    app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

                <TextView
                    android:id="@+id/tvSaleProcess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:alpha="0.6"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="center"
                    android:text="@string/terms_sales"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline_"
                    app:layout_constraintTop_toBottomOf="@+id/tvWelcomeDetails" />


                <TextView
                    android:id="@+id/tvSalesDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:alpha="0.6"

                    android:fontFamily="@font/cairo_regular"
                    android:gravity="start"
                    android:text="@string/terms_sales_details"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline_"
                    app:layout_constraintTop_toBottomOf="@+id/tvSaleProcess" />

                <TextView
                    android:id="@+id/tvPayments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:alpha="0.6"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="center"
                    android:text="@string/terms_paymenst"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline_"
                    app:layout_constraintTop_toBottomOf="@+id/tvSalesDetails" />

                <TextView
                    android:id="@+id/tvPaymentDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:fontFamily="@font/cairo_regular"
                    android:gravity="start"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:text="@string/terms_payments_details"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_14sp"
                    app:layout_constraintStart_toStartOf="@+id/tvPayments"
                    app:layout_constraintTop_toBottomOf="@+id/tvPayments" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/dimen_16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/dimen_16dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>