<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="productModel"
            type="com.unicom.wasalakclientproduct.model.productDetails.ProductResponse" />

        <variable
            name="dialog"
            type="com.unicom.wasalakclientproduct.ui.productDetails.AddProductSheetDialog" />

        <variable
            name="total_price"
            type="double" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dimen_16dp">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimen_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dimen_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/dimen_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/dimen_16dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:tint="?attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/start_guide"
            app:layout_constraintTop_toTopOf="@+id/top_guide" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:fontFamily="@font/cairo_semibold"
            android:text='@{productModel.result.displayName??""}'
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_15sp"
            app:layout_constraintEnd_toStartOf="@+id/textView20"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/top_guide" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="16dp"
            android:background="#8A000000"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/cart_ask"
            android:textColor="#8A000000"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintStart_toStartOf="@+id/start_guide"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/specialOrderInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_6dp"
            android:theme="@style/TextLabel"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusBottomStart="@dimen/dimen_6dp"
            app:boxCornerRadiusTopEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusTopStart="@dimen/dimen_6dp"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="@dimen/dimen_0.5dp"
            app:boxStrokeWidthFocused="@dimen/dimen_1dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/end_guide"
            app:layout_constraintStart_toStartOf="@+id/start_guide"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/specialOrderInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:gravity="top|start"
                android:hint="@string/special_order"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:minLines="3"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:paddingBottom="@dimen/dimen_8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textColorHint="#40000000"
                android:textSize="@dimen/dimen_16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/cairo_bold"
            android:onClick="@{()->dialog.onNavigateToCart(specialOrderInput.getText().toString())}"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="8dp"
            android:text="@string/complete_purchase"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:cornerRadius="@dimen/dimen_20dp"
            app:layout_constraintEnd_toStartOf="@+id/end_guide"
            app:layout_constraintStart_toStartOf="@+id/center_guideline"
            app:layout_constraintTop_toBottomOf="@+id/specialOrderInputLayout" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/added_to_cart"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_13sp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/total_cart"
            android:textColor="#7C7C7D"
            android:textSize="@dimen/dimen_13sp"
            app:layout_constraintEnd_toStartOf="@+id/end_guide"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/cairo_semibold"
            android:text="@{String.format(@string/discount_placeholder,total_price)}"
            android:textColor="@color/black"
            tools:text="44444"
            android:textSize="@dimen/dimen_15sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintEnd_toStartOf="@+id/end_guide"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_shopping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/cairo_bold"
            android:onClick="@{()->dialog.onBackToShopping(specialOrderInput.getText().toString())}"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="8dp"
            android:text="@string/purchase_skip"
            android:textAllCaps="false"
            android:textColor="#003312"
            android:textSize="@dimen/dimen_16sp"
            app:cornerRadius="@dimen/dimen_20dp"
            app:layout_constraintEnd_toStartOf="@+id/center_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guide"
            app:layout_constraintTop_toBottomOf="@+id/specialOrderInputLayout"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="@dimen/dimen_1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>